# StanfordCars

./: pyproject.toml
notebooks/: train_and_validate-cars.ipynb
stanfordcars/: default.cfg  main.py  train_and_validate.py  utils.py
tests/: test_stanfordcars.py
